# PADrend

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindEScript.cmake  FindPADrend.cmake
data/mesh/: Schwein.low.t.mmf  tCube.mmf  tWall_2.mmf  tree_lite1.mmf  tree_lite2.mmf  tree_red.mmf
data/scene/: szene_1.minsg
data/shader/: ShadowShader.shader  SimpleShader.fs  SimpleShader.vs
plugins/SamanVipasyanAvishek_Group/: Plugin.escript  ScriptedExampleRenderer.escript  ScriptedExampleRendererCamera.escript  ScriptedExampleRendererColor.escript
scripts/: MeshBuilderExample.escript  _folder.info
